# wordle-tui

./: .env.example  .gitignore  .pypirc.example  LICENSE  README.md  install.sh  pyproject.toml  railway.toml  requirements.txt
admin-web/: index.html  package-lock.json  package.json  vite.config.ts
admin-web/src/: App.vue  api.ts  main.ts  style.css
admin-web/src/views/: Dashboard.vue  Leaderboard.vue  Users.vue  Words.vue
alembic/: env.py
alembic/versions/: 001_initial_schema.py  004_add_email_column.py  005_add_game_progress.py
client/: api_client.py  app.py  config.py  theme.py
client/screens/: __init__.py  game_screen.py  help_screen.py  leaderboard_screen.py  login_screen.py  result_screen.py  settings_screen.py  stats_screen.py
client/widgets/: __init__.py  contribution_graph.py  game_board.py  keyboard.py  stats_panel.py  tile.py
data/: answer_words_offline.txt  valid_words.txt  words_offline.json
npm/: package.json
npm/scripts/: postinstall.js
scripts/: generate_offline_words.py  generate_words.py  seed_database.py
server/: config.py  database.py  main.py
server/admin/: router.py
server/admin/static/: dashboard.html
server/auth/: dependencies.py  models.py  router.py  schemas.py  service.py
server/games/: models.py  router.py  schemas.py  service.py
server/leaderboard/: router.py  schemas.py  service.py
server/stats/: router.py  schemas.py  service.py
server/streaks/: models.py  router.py  schemas.py  service.py
server/words/: models.py  router.py  schemas.py  service.py
