[project]
name = "tui-wordle"
version = "0.1.0"
description = "Beautiful terminal-based Wordle game with shared leaderboard"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["wordle", "tui", "terminal", "game", "textual"]
authors = [
    {name = "subinium"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment :: Puzzle Games",
]
dependencies = [
    # TUI Client (minimal for playing)
    "textual>=0.47.0",
    "httpx>=0.27.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
server = [
    # API Server (for self-hosting)
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pyjwt>=2.8.0",
]
dev = [
    "textual-dev>=1.4.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
]

[project.urls]
Homepage = "https://github.com/subinium/tui-wordle"
Repository = "https://github.com/subinium/tui-wordle"
Issues = "https://github.com/subinium/tui-wordle/issues"

[project.scripts]
wordle = "client.app:main"
tui-wordle = "client.app:main"
wd = "client.app:main"
wordle-server = "server.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["client", "server", "data"]

[tool.hatch.build.targets.sdist]
include = [
    "client/",
    "server/",
    "data/",
    "alembic/",
    "pyproject.toml",
    "README.md",
    "LICENSE",
]
